# entities_api

./: .dockerignore  .editorconfig  .env  .env.container  .env.example  .flake8  .gitattributes  .gitignore  .releaserc.json  CHANGELOG.md  CONNECTION_TESTS.md  Dockerfile  Dockerfile.api  Dockerfile.initializer  Dockerfile.sandbox  LICENSE  MANIFEST.in  README.md  __init__.py  _version.py  alembic.ini  api_reqs_hashed.txt  api_requirements.in  api_unhashed_reqs.txt  app.py  docker-compose.dev.example.yml  docker-compose.template.yml  docker-compose.yml  docker-entrypoint.sh  entities_entrypoint.sh  entrypoint.sh  fix_ruff.py  generate_schema.py  hash_pip.ini  import_refactor.py  inference_service.py  load_appropriate_env.py  main.py  model_compatibility_report.md  new_changes.md  (+15 more)
.github/: bug_report.md  (+2 more)
src/api/entities_api/: __main__.py  app.py  dependencies.py  main.py  pyproject.toml  schemas.py  serializers.py
src/api/entities_api/cache/: assistant_cache.py  inventory_cache.py  message_cache.py  old_assistant_cache.py  scratchpad_cache.py  web_cache.py
src/api/entities_api/cli/: bootstrap_admin.py  docker_manager.py  generate_docker_compose.py  purge_expired_files.py
src/api/entities_api/clients/: actions.py  assistants.py  async_to_sync.py  client.py  client_actions_client.py  client_assistant_client.py  client_code_executor.py  client_message_client.py  client_run_client.py  client_sandbox_client.py  client_thread_client.py  client_tool_client.py  client_user_client.py  delta_normalizer.py  files.py  messages.py  multimodal_utils.py  ollama_client.py  runs.py  stream_ollama_native.py  threads.py  tools.py  unified_async_client.py  users.py  vllm_raw_stream.py
src/api/entities_api/constants/: assistant.py  deep_search.py  delegator.py  platform.py  together_candidate_endpoints.py  tools.py  worker.py
src/api/entities_api/daemons/: purge_expired_runs.py  purge_orphaned_threads.py  purge_soft_deleted_files.py  purge_soft_deleted_vector_stores.py
src/api/entities_api/db/: database.py
src/api/entities_api/handlers/: event_handler_api.py
src/api/entities_api/inference/: NEW_base_inference.py  base_inference.py  cloud_azure_r1.py  cloud_deepseek_r1.py  cloud_deepseek_v3.py  cloud_groq_deepseekr1_llama.py  cloud_hyperbolic_llama3.py  cloud_hyperbolic_r1.py  cloud_hyperbolic_v3.py  cloud_inference.py  cloud_together_ai_llama2.py  cloud_together_ai_r1.py  cloud_together_ai_v3.py  groq_inference.py  inference_arbiter.py  inference_factory.py  inference_provider_selector.py  llama_local.py  local_deepseekr1.py  local_inference.py  new_hyperbolic_v3.py
src/api/entities_api/inference/deepseek/: deep_seek_handler.py  deepseek_async_client.py  deepseek_chat_inference.py  deepseek_handler.py
src/api/entities_api/inference/google/: google_handler.py
src/api/entities_api/inference/groq/: groq_handler.py
src/api/entities_api/inference_mixin/: base_inference.py  inference_arbiter.py  inference_provider_selector.py  orchestrator_core.py
src/api/entities_api/interfaces/: base_vector_store.py
src/api/entities_api/models/: _models.py  models.py
src/api/entities_api/new_inference/: base_class.py  base_inference.py  client_factory_mixin.py  client_init_mixin.py  new_base.py  streaming_mixin.py
src/api/entities_api/observability/: tracing.py
src/api/entities_api/orchestration/: README.md
src/api/entities_api/platform_tools/: platform_tool_service.py
src/api/entities_api/ptool_definitions/: assemply.py  base_tool_defs.py  code_interpreter.py  computer.py  file_search.py  web_search.py
src/api/entities_api/ptool_handlers/: platform_tool_service.py
src/api/entities_api/routers/: __init__.py  actions.py  actions_router.py  admin_router.py  api_key_router.py  assistants.py  assistants_router.py  events.py  events_router.py  files.py  files_router.py  handler_routers.py  inference.py  inference_router.py  inference_routers.py  messages.py  messages_router.py  routers.py  runs.py  runs_router.py  samba.py  samba_router.py  samba_routers.py  sandbox_auth_router.py  the_engineer_router.py  threads.py  threads_router.py  tools.py  tools_router.py  users.py  users_router.py  vectors.py  vectors_router.py
src/api/entities_api/schemas/: actions.py  assistants.py  common.py  file_service.py  files.py  inference.py  messages.py  runs.py  sandbox.py  schemas.py  threads.py  tools.py  users.py  vectors.py
src/api/entities_api/services/: _actions_service.py  action_service.py  actions.py  actions_service.py  api_key_service.py  assistant_service.py  assistant_set_up_service.py  assistants.py  assistants_service.py  cached_assistant.py  code_executor_service.py  conversation_truncator.py  event_handler.py  event_handler_service.py  file_processor.py  file_service.py  identifier_service.py  logging_service.py  message_service.py  native_execution_service.py  ollama_service.py  run_service.py  runs.py  runs_service.py  sandbox_service.py  scratchpad_service.py  search_service.py  sse_manager.py  thread_service.py  threads_service.py  tool_service.py  tools.py  user_service.py  vector_store_manager.py  vector_store_service.py  vector_waves.py  vectors.py  vectors_service.py  web_reader.py
src/api/entities_api/system_message/: _deprecated_instructions.py  assembly.py  blah.py  core_instructions.py  main_assembly.py  synthesis_assembly.py
src/api/entities_api/utils/: assistant_builder.py  assistant_manager.py  async_to_sync.py  byte_this.py  cache_utils.py  check_admin_status.py  conversation_truncator.py  conversion_utils.py  count_tokens.py  david_json_encoder.py  delegation_model_map.py  doc_testing.py  ephemeral_thread_proxy.py  ephemeral_worker_maker.py  level2_utils.py  level3_utils.py  list_routes.py  mint_computer_ticket.py  new_assistant_builder.py  samba_client.py  wrap_sync_generator.py
src/api/sandbox/: main.py  pyproject.toml  requirements.txt
src/api/sandbox/routers/: v1.py
src/api/sandbox/services/: code_execution.py  code_execution_service.py  logging_service.py  room_manager.py  shell_session.py  signed_url_service.py
src/api/sandbox/utils/: sio.py
(+868 files in other folders)
